{{$NEXT}}

Feature changes:
* pos value 'prep' (preposition) renamed to 'adp' (adposition).
* the remaining values of the subpos feature dissolved into advtype and two
  new features, adpostype and parttype.

Interface:
* various tools for driver testing
* Empty implementations of decode(), encode() and list() in the Tagset class will now throw an exception if called.

Improved documentation of the modules.



2.001     2014-06-13 17:56:05+02:00 Europe/Prague

Complete rewrite of Interset. The old Perl interface was not object-oriented.
The modules resided under the “tagset” namespace (yes, all lowercase). The new
modules are object-oriented (using Moose) and the new namespace is Lingua::
Interset. And it is available at the CPAN.

There are the following modules:
* Lingua::Interset
* Lingua::Interset::FeatureStructure
* Lingua::Interset::Tagset
* Lingua::Interset::OldTagsetDriver
* Lingua::Interset::Trie

Drivers:
* Initially, only the 'en::penn' driver has been ported to Interset 2 (see the
  module Lingua::Interset::EN::Penn). The other drivers will be ported
  gradually. In the meantime, the old implementations (tagset::*) can be
  accessed through a wrapper class, Lingua::Interset::OldTagsetDriver.
  (The wrapper is shipped together with Interset 2 but the old drivers are not.
  They are still downloadable from the Interset wiki.)

Feature changes:
* Several new features were split from the subpos feature: nountype, adjtype,
  verbtype and conjtype. This is a logical extension of the previously created
  prontype, advtype etc.
* The features tense and subtense have been merged. Their separation in the
  early years of Interset was driven by problems with encoding tagsets that
  lacked specialized tenses; later on however, Interset got the algorithms for
  strict encoding and feature replacement. Now there are other features whose
  values form a hierarchy, so it seems logical to treat tenses the same way.


