@@ -4,7 +4,7 @@
 # 25.3.2009: new tag NIL appears in CoNLL 2009 English data for tokens &, $, %
 # 6.6.2014: moved to the new object-oriented Interset
 
-package Lingua::Interset::EN::Penn;
+package Lingua::Interset::Tagset::EN::Penn;
 use strict;
 use warnings;
 # VERSION: generated by DZP::OurPkgVersion
@@ -504,8 +504,8 @@ sub list
 
 =head1 SYNOPSIS
 
-  use Lingua::Interset::EN::Penn;
-  my $driver = Lingua::Interset::EN::Penn->new();
+  use Lingua::Interset::Tagset::EN::Penn;
+  my $driver = Lingua::Interset::Tagset::EN::Penn->new();
   my $fs = $driver->decode('NN');
 
 or
